--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>PM School</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -93,16 +93,43 @@
 
               <section id="section-perspectives">
                   <div class="container">
-                      <h2 id="perspectives">Чего Вы хотите?</h2>
-                      <ul>
-                          <li>Двигаться по карьерной лестнице?</li>
-                          <li>Нормально зарабатывать?</li>
-                          <li>Делать что-то полезное, ценное и значимое?</li>
-                          <li>Быть уверенным в завтрашнем дне?</li>
-                          <li>Путешествовать / Ездить в командировки?</li>
-                          <li>Иметь большой горизонт планирования?</li>
-                          <li>Быть успешным?</li>
-                      </ul>
+                      <div class="row">
+                          <h2 id="perspectives">Зачем мне это?</h2>
+                      </div>
+                      <div class="row">
+                          <div class="col-md-4">
+                            <h3>Чего Вы хотите?</h3>
+                            <ul>
+                                <li>Двигаться по карьерной лестнице?</li>
+                                <li>Нормально зарабатывать?</li>
+                                <li>Делать что-то полезное, ценное и значимое?</li>
+                                <li>Быть уверенным в завтрашнем дне?</li>
+                                <li>Путешествовать / Ездить в командировки?</li>
+                                <li>Иметь большой горизонт планирования?</li>
+                                <li>Быть успешным?</li>
+                            </ul>
+                          </div>
+                          <div class="col-md-4">
+                            <h3>IT в Украине</h3>
+                            <ul>
+                                <li>Темпы роста IT отрасли: 15-20% в год</li>
+                                <li>IT - третья по размеру отрасль по вкладу в ВВП</li>
+                                <li>IT отрасль за 2014 год: 3-5% ВВП</li>
+                                <li>На 2015 год: ~80.000 IT-специалистов</li>
+                                <li>Прогноз роста на 2020 год: 180.000 IT-специалистов</li>
+                                <li>На сейчас Европе не хватает около 900.000 IT-специалистов</li>
+                            </ul>
+                          </div>
+                          <div class="col-md-4">
+                            <h3>Насколько ценны айтишники</h3>
+                            <ul>
+                              <li>Недавно украинский стартап Looksery был куплен американской компанией за $150 млн. В этом стартапе работало около 20 человек (затратами в этом примере можно пренебречь)</li>
+                              <li>Итого, 1 человек принес дохода $150 млн / 20 чел = $7.500.000</li>
+                              <li>Вся сельскохозяйственная отрасль принесла дохода в 2014 году на сумму ₴132,5 млрд (~$6,5 млрд). В с/х в Украине работает около 12 млн человек</li>
+                              <li>Итого, 1 человек принес дохода $6.500 млн / 12 млн чел = $541</li>
+                            </ul>
+                          </div>
+                      </div>
                   </div>
               </section>
 
