--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,7 +46,7 @@
                                   <li><a href="#buy">Купить</a></li>
                               </ul>
                           </div><!-- /.navbar-collapse -->
-                      </div><!-- /.container-fluid -->
+                      </div><!-- /.container -->
                   </nav>
               </header>
 
@@ -129,8 +129,13 @@
                               <li>Итого, 1 человек принес дохода $6.500 млн / 12 млн чел = $541</li>
                             </ul>
                           </div>
-                      </div>
-                  </div>
+                      </div><!-- /.row -->
+					  <div class="row">
+						<div class="col-md-4">
+						Картинка
+						</div>
+					  </div>
+                  </div><!-- /.container -->
               </section>
 
               <section id="details">
