add sections deatils with modal and bonuses

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -158,7 +158,7 @@
 					</div><!-- /.container -->
 				</section>
 
-				<section id="details">
+				<section id="sections-details">
 					<div class="container">
 						<div class="row">
 							<h2 id="details">Выбери свою программу обучения</h2>
@@ -210,14 +210,195 @@
 							</div>
 						</div><!-- /.row -->
 						<div class="row">
-							
+                            <div class="col-md-12">
+                                <h3>Детали программы обучения</h3>
+                                <p>Внутри любая из программ программа разбита на три большие области знаний. Это Software Development Life Cycle, Management Hard Skills и Management Soft Skills</p>
+                            </div>
 						</div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-4">
+                                <h4>SDLC – Software Development Life Cycle:</h4>
+                                <p>Этапы и фазы разработки, Release Management Process, многостримовая разработка, Version Control Systems, Configuration and Support Teams (L1, L2, L3) и многое другое</p>
+                            </div>
+                            <div class="col-md-4">
+                                <h4>Management Hard Skills:</h4>
+                                <p>Процессы управления проектами, планирование проекта, критический путь, KPI, управление изменениями, качеством, ресурсами проекта, типы контрактов, отчетность, методологии и фреймворки, и многое другое</p>
+                            </div>
+                            <div class="col-md-4">
+                                <h4>Management Soft Skills:</h4>
+                                <p>Коммуникации, лидерство, тайм-менеджмент, работа с командой, типология личности, конфликты, убеждение и переговоры, проведение совещаний, собеседований, построение карьеры и многое другое</p>
+                            </div>
+                        </div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-4">
+                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+                                    <i class="glyphicon glyphicon-education"></i> Подробная программа
+                                </button>
+
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                <h4 class="modal-title" id="myModalLabel">Подробная структура программы обучения</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Какие навыки Вы сможете добавить в свое резюме по окончанию обучения в программе</p>
+                                                <h5>Программа «Fundamentals» и «Senior»</h5>
+                                                <p>Одинаковые названия тем в программе «Fundamentals» и «Expert», но очень разная глубина проработки материала для слушателей.</p>
+                                                <p>В программе «Fundamentals» – много времени запланировано на разбор сути понятий, объяснение концепций и взаимосвязей, чтобы у слушателей возникло необходимое понимание и навыки, закрепляемые в дальнейшем на практике.</p>
+                                                <p>В программу «Senior» входят те же темы, что и в программу «Fundamentals», однако глубина разбора информации значительно больше, больше практики и меньше теории для объяснения понятий. Теории значительно меньше – предполагается, что слушатели уже большинство вещей знают, понимают и имеют соответствующий опыт.</p>
+                                                <h6>SDLC:</h6>
+                                                <ul>
+                                                    <li>Цикл Деминга, цикл Колба</li>
+                                                    <li>Этапы и фазы разработки</li>
+                                                    <li>Environments: DEV, QA, SIT, UAT, PROD</li>
+                                                    <li>Зависимости и переходы между этапами разработки</li>
+                                                    <li>Redline, Deadline, Release, Production</li>
+                                                    <li>Release Management Process</li>
+                                                    <li>Высокоуровневые шаги при разработке релиза</li>
+                                                    <li>Коммуникации: «Правила игры» и обработка исключительных ситуаций</li>
+                                                    <li>Многостримовая разработка</li>
+                                                    <li>Итерационная разработка</li>
+                                                    <li>Интеграция с другими системами</li>
+                                                    <li>Builds & Branching</li>
+                                                    <li>Version Control Systems</li>
+                                                    <li>Работа со спецификациями</li>
+                                                    <li>Приоритезация требований</li>
+                                                    <li>Прототипирование</li>
+                                                    <li>Балансировка ресурсов</li>
+                                                    <li>Configuration Team</li>
+                                                    <li>Support Teams: L1, L2, L3</li>
+                                                </ul>
+                                                <h6>Hard Skills:</h6>
+                                                <ul>
+                                                    <li>Успех проекта (инвестор, заказчик, PM)</li>
+                                                    <li>Цели проекта</li>
+                                                    <li>SMART</li>
+                                                    <li>Результаты проекта</li>
+                                                    <li>Этапы, фазы, жизненный цикл проекта</li>
+                                                    <li>Процессы управления проектами</li>
+                                                    <li>Структуры организаций (проектная, функциональная, смешанная, …)</li>
+                                                    <li>Заинтересованные стороны проекта и управление ими</li>
+                                                    <li>Планирование проекта (PERT, UseCasePoints, 5 sigma, …)</li>
+                                                    <li>Критический путь</li>
+                                                    <li>Индексы SPI, CPI</li>
+                                                    <li>Change Requests, Change Control Board</li>
+                                                    <li>Работа с изменениями в проекте</li>
+                                                    <li>Письменная коммуникация</li>
+                                                    <li>Управление рисками/возможностями</li>
+                                                    <li>SWOT, 5 Why, SSCC, Fishbone, …</li>
+                                                    <li>Контроль и отчетность</li>
+                                                    <li>Управление качеством</li>
+                                                    <li>KPI и SLA</li>
+                                                    <li>Ресурсы проекта, Configuration Management</li>
+                                                    <li>Типы контрактов (FP, T&amp;M, …), затраты, P&amp;L, финансы</li>
+                                                    <li>Методологии и фреймворки (Agile, Scrum, Waterfall, Kanban, …)</li>
+                                                </ul>
+                                                <h6>Soft Skills:</h6>
+                                                <ul>
+                                                    <li>Ориентация на результат</li>
+                                                    <li>Доверие и прозрачность</li>
+                                                    <li>Коммуникации (с заказчиком, с начальством, с командой)</li>
+                                                    <li>Полномочия, ответственность</li>
+                                                    <li>Лидерство</li>
+                                                    <li>Тайм-менеджмент</li>
+                                                    <li>Самоконтроль</li>
+                                                    <li>Работа в потоке</li>
+                                                    <li>Мотивация и демотивация</li>
+                                                    <li>Умение выступать, проведение презентаций, elevator speech</li>
+                                                    <li>Типология личности, DISC</li>
+                                                    <li>Метапрограммы</li>
+                                                    <li>Делегирование</li>
+                                                    <li>Обратная связь</li>
+                                                    <li>Наставничество</li>
+                                                    <li>Встречи 1:1 (с заказчиком, с начальством, с подчиненными)</li>
+                                                    <li>Принципы конструктива</li>
+                                                    <li>Разрешение проблем и конфликтов, тлеющие конфликты</li>
+                                                    <li>Убеждение, подстройка</li>
+                                                    <li>Переговоры</li>
+                                                    <li>Групповая динамика</li>
+                                                    <li>Создание команды</li>
+                                                    <li>Командный констркутор</li>
+                                                    <li>Распределенные команды</li>
+                                                    <li>Проведение совещаний</li>
+                                                    <li>Проведение собеседований</li>
+                                                    <li>Компетентность, интерес</li>
+                                                    <li>Оценка производительности подчиненных (appraisals)</li>
+                                                </ul>
+                                                <h5>Программа «Expert»</h5>
+                                                <p>В программу «Expert» входит также все самое важное из программы уровня «Senior»</p>
+                                                <h6>SDLC:</h6>
+                                                <ul>
+                                                    <li>Экзотические SDLC</li>
+                                                </ul>
+                                                <h6>Hard Skills:</h6>
+                                                <ul>
+                                                    <li>Жизненный цикл компании/департамента/подразделения</li>
+                                                    <li>Управление группой проектов (портфелем, программой)</li>
+                                                    <li>Виды/варианты приоритезации задач</li>
+                                                    <li>Управление персоналом, backfill, ramp-up, ramp-down, forecasting, …</li>
+                                                    <li>Теория Минцберга для огранизаций</li>
+                                                    <li>Проведение аудитов проектов</li>
+                                                    <li>Проект как сервис и сервис как проект</li>
+                                                </ul>
+                                                <h6>Soft Skills:</h6>
+                                                <ul>
+                                                    <li>Власть, влияние</li>
+                                                    <li>Стресс, работа со стрессом</li>
+                                                    <li>Унылая работа</li>
+                                                    <li>Идеальный руководитель (типология Адизеса)</li>
+                                                    <li>Манипуляции</li>
+                                                    <li>Жесткие переговоры</li>
+                                                    <li>Работа с заказчиком, продажи</li>
+                                                    <li>Превращение сложного заказчика в адекватного</li>
+                                                    <li>Сервисный подход</li>
+                                                    <li>Межкультурные различия</li>
+                                                    <li>Коучинг, менторинг и развитие сотрудников</li>
+                                                    <li>Миссия, видение</li>
+                                                    <li>Ценности, этика, этика веры</li>
+                                                    <li>Построение карьеры</li>
+                                                    <li>Управление организационными изменениями</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div><!-- /.modal -->
+
+                            </div>
+                            <div class="col-md-8">
+                                <p>Профессиональный менеджер в IT-разработке программного обеспечения знает и умеет использовать все эти три области. Любая другая программа без какой-либо из этих трех областей была бы не полной и не позволит Вам стать профессиональным руководителем.</p>
+                            </div>
+                        </div><!-- /.row -->
 					</div><!-- /.container -->
 				</section>
 
-				<section id="bonuses">
+				<section id="section-bonuses">
 					<div class="container">
-
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h2 id="bonuses">Плюсы и выгоды для участника</h2>
+                            </div>
+                        </div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-3"></div>
+                            <div class="col-md-9">
+                                <ul>
+                                    <li>Все необходимые знания для получения знаний и навыков в области управления проектам в IT разработке собраны в одной цельной программе</li>
+                                    <li>Огромное количество теории и практики</li>
+                                    <li>Все материалы структурно увязаны в одно целое и дают завершенную картину знаний</li>
+                                    <li>Уникальность материалов, кейсов и практических примеров</li>
+                                    <li>Обучающие симуляционные игры, базирующиеся на реальных событиях</li>
+                                    <li>Множество тестов на определения своего стиля управления и рекомендации по оптимальному использованию этого стиля</li>
+                                    <li>Приглашенные спикеры — Guest Stars — на корневые темы программы для представления темы слушателям</li>
+                                    <li>Возможность познакомиться с ведущими специалистами — Guest Stars</li>
+                                    <li>Обязательная проверка домашних заданий</li>
+                                    <li>Последовательность тем организованна таким образом, что обучение происходит от простого к сложному, затрагивая все три сектора знаний одновременно (SDLC, Hard Skills и Soft Skills)</li>
+                                    <li>Регулярная персональная обратная связь от преподавателя</li>
+                                    <li>Лучшим ученикам будут даны рекомендации в IT-компании на прохождение собеседования (есть договоренность с IT-компаниями)</li>
+                                </ul>
+                            </div>
+                        </div><!-- /.row -->
 					</div>
 				</section>
 
