--- a/public_html/index.html
+++ b/public_html/index.html
@@ -82,6 +82,10 @@
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2">
 								<h4>Регистрация закрывается 15 января, в 23:59 Kyiv Time Zone (+2 UTC)</h4>
+                                <div id="timer" class="text-primary">
+                                    <p class="time"></p>
+                                    <p class="timer-labels"><span>Дней</span><span>Часов</span><span>Минут</span><span>Секунд</span></p>
+                                </div>
 								<div>
 									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
@@ -437,5 +441,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="js/bootstrap.min.js"></script>
+		<script src="js/jquery.countdownTimer.min.js"></script>
+        <script src="js/scripts.js"></script>
 	</body>
 </html>
