add scroller and sections testimonials, study

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,7 +34,7 @@
 								<a class="navbar-brand" href="#"><img src="img/logo.png" alt="ConsultPM"></a>
 							</div>
 							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-								<ul class="nav navbar-nav">
+								<ul class="nav navbar-nav scrollnav">
 									<li><a href="#about">О чем</a></li>
 									<li><a href="#perspectives">Перспективы</a></li>
 									<li><a href="#details">Детально</a></li>
@@ -50,7 +50,7 @@
 					</nav>
 				</header>
 
-				<section id="about">
+				<section class="about-container">
 					<div class="container">
 						<div class="row">
 							<div class="col-md-5"><h1>Уникальная программа <q>Обучение проектному менеджменту в IT-разработке</q></h1></div>
@@ -94,7 +94,7 @@
 					</div><!-- /.container -->
 				</section>
 
-				<section id="section-perspectives">
+				<section class="perspectives-container">
 					<div class="container">
 						<div class="row">
 							<h2 id="perspectives">Зачем мне это?</h2>
@@ -162,7 +162,7 @@
 					</div><!-- /.container -->
 				</section>
 
-				<section id="sections-details">
+				<section class="details-container">
 					<div class="container">
 						<div class="row">
 							<h2 id="details">Выбери свою программу обучения</h2>
@@ -377,7 +377,7 @@
 					</div><!-- /.container -->
 				</section>
 
-				<section id="section-bonuses">
+				<section class="bonuses-container">
 					<div class="container">
                         <div class="row">
                             <div class="col-md-12">
@@ -406,33 +406,100 @@
 					</div>
 				</section>
 
-				<section id="coach">
+				<section class="coach-container">
 					<div class="container">
-
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h2 id="coach">Автор программы и тренер</h2>
+                            </div>
+                        </div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p>Можно ли доверять качеству обучения? Первый запуск буду вести лично я — Алексей Егошин. Сертифицированный тренер Luxoft Training Center по управлению проектами и soft skills с 5 летним стажем преподавания. За 2014-2015 года провел тренингов на 600+ часов. Сертифицированный PMP и MBA специалист. <a href="https://drive.google.com/folderview?id=0B0EfTeQW1vKKWmQ3RWpvZ3Z3WlU&usp=sharing">Обладатель множества сертификатов</a>, постоянно повышающий свой профессиональный уровень. Более 10 лет работы в ведущих IT и Telecom компаниях Украины (Квазар-Микро, MTC, Инфопульс и Luxoft). Огромный практический опыт работы в международных проектах, который продолжает постоянно пополняться благодаря работе в секторе разработки программного обеспечения. Активный участник и докладчик PM сообществ и тематическОбладатель множества сертификатових конференций по управлению проектами. Подробнее обо мне можно прочитать на моем сайте на странице <a href="http://consultpm.com/about/">про автора</a>.</p>
+                            </div>
+                            <div class="col-md-6">
+                                <img src="img/coach.png" alt="Coach" class="img-responsive">
+                            </div>
+                        </div><!-- /.row -->
 					</div>
 				</section>
 
-				<section id="testimonials">
+				<section class="testimonials-container">
 					<div class="container">
-
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h2 id="testimonials">Отзывы слушателей</h2>
+                            </div>
+                        </div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-12">
+                                <dl>
+                                    <dt>Дмитрий:</dt>
+                                    <dd>Крайне полезный тренинг для понимания процессов в самом начале и по ходу проекта. Очень полезны знания по оценке проекта, учету рисков, организации и использованию различной статистики по проекту. Буду использовать в своем проекте</dd>
+                                    <dt>Игорь:</dt>
+                                    <dd>Очень понравились практические задачи, примеры и полезные рекомендации тренера</dd>
+                                    <dt>Светлана:</dt>
+                                    <dd>Очень интересно и полезно. Количество практических примеров и обсуждение кейсов - очень ценно! Спасибо тренеру!</dd>
+                                    <dt>Виктор:</dt>
+                                    <dd>Наиболее полезным есть то, что тренер работает в IT, имеет практический опыт, знает, как правильно преподнести материал, информация подается структурировано и доходчиво</dd>
+                                    <dt>Irina:</dt>
+                                    <dd>Very competent trainer, explained every last bit of course, so everything was clear and reasonable</dd>
+                                    <dt>Алексей:</dt>
+                                    <dd>Взгляд на IT-проекты со стороны руководителя - очень полезный в работе, также понравилось наличие примеров и задач, которые разбирали в группе, отличная подборка задач и демо-материалов</dd>
+                                </dl>
+                            </div>
+                        </div><!-- /.row -->
 					</div>
 				</section>
 
-				<section id="study">
+				<section class="study-container">
 					<div class="container">
-
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h2 id="study">Как будет проходить обучение</h2>
+                            </div>
+                        </div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-4">
+                                <p>Обучение будет проходить очно в MBA-подобном стиле:</p>
+                                <ul>
+                                    <li>Вам будет выдаваться материал на самостоятельное изучение перед занятием</li>
+                                    <li>дальше этот изученный материал будет обсуждаться в группе на занятии</li>
+                                    <li>на занятии материал закрепляется практикой и упражнениями</li>
+                                    <li>будет выдаваться домашнее задание на дальнейшее закрепление материала в промежутке между занятиями</li>
+                                    <li>плюс очередное домашнее задание на самостоятельное изучение перед следующим занятием</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-4">
+                                <p>Время:</p>
+                                <ul>
+                                    <li>Два дня в неделю каждую неделю: пятница+суббота или воскресенье+понедельник</li>
+                                    <li>По 8 часов каждый день (с 10:00 до 18:00)</li>
+                                    <li><em>*возможен вариант (по договоренности со всей группой) перенести часть практики на самостоятельную работу в течении недели, тем самым сделав время обучения в пятницу/понедельник с 17:00 до 21:00. Это удобно, если Вы работаете</em></li>
+                                </ul>
+                            </div>
+                            <div class="col-md-4">
+                                <p>Таким образом на занятии мы не будем изучать теорию, а будем ее обсуждать. Изучать/читать/просматривать новую тему Вы будете самостоятельно ДО занятия. Это позволяет максимально наполнить занятия практикой, разбором кейсов и примеров, решением ситуаций и обсуждением в группе, что дает огромный выигрыш по сравнению с обычными точечными тренингами.</p>
+                                <p>Невыполнение домашнего задания приведет к не допуску на занятие. Несколько не допусков приведут к исключению из программы обучения.</p>
+                                <p>По окончании обучения все участники сдают выпускной экзамен и в случае прохождения экзамена получают сертификат об окончании программы обучения.</p>
+                            </div>
+                        </div>
 					</div>
 				</section>
 
-				<section id="guarantee">
+				<section class="guarantee-container">
 					<div class="container">
+                        <div class="row">
 
+                        </div><!-- /.row -->
 					</div>
 				</section>
 
-				<section id="buy">
+				<section class="buy-container">
 					<div class="container">
+                        <div class="row">
 
+                        </div><!-- /.row -->
 					</div>
 				</section>
 			</div><!-- /#wrapper-->
