add section guarantiee

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -490,7 +490,10 @@
 				<section class="guarantee-container">
 					<div class="container">
                         <div class="row">
-
+							<div class="col-md-12">
+								<h2>Гарантия</h2>
+								<p>Еще одним примером сервиса является гарантия возврата 100% денег. Если Вас не устроят занятия/материалы/упражнения - Вы получите назад свои деньги. Этим правом можно будет воспользоваться только в течение первого занятия. В то же время, воспользовавшись им, Вы потеряете возможность участия в любых будущих программах, событиях, курсах и мероприятияхот consultpm.com</p>
+							</div>
                         </div><!-- /.row -->
 					</div>
 				</section>
